--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/nstulogo"
+        android:icon="@drawable/ic_nstu"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
