--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="21" />
+ <uses-permission android:name="android.permission.INTERNET"/>
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -26,6 +28,15 @@
             android:name=".NstuInfoDetails"
             android:label="@string/title_activity_nstu_info_details" >
         </activity>
+        
+             <meta-data android:name="com.google.android.gms.version"
+android:value="@integer/google_play_services_version" />
+<!--Include the AdActivity configChanges and theme. -->
+<activity android:name="com.google.android.gms.ads.AdActivity"
+android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+android:theme="@android:style/Theme.Translucent" />
+        
     </application>
+    
 
 </manifest>
