--- a/project.properties
+++ b/project.properties
@@ -14,4 +14,4 @@
 target=android-20
 android.library.reference.1=../appcompat_v7
 android.library.reference.2=../google-play-services_lib
-android.library.reference.3=../gridlayout_v7
+android.library=false
