--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mashpy.nstuinfo"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="2"
+    android:versionName="1.1" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -27,8 +27,9 @@
         <activity
             android:name=".NstuInfoDetails"
             android:label="@string/title_activity_nstu_info_details" >
+            android:name="com.mashpy.nstuinfo.WebActivity">
         </activity>
-        
+
              <meta-data android:name="com.google.android.gms.version"
 android:value="@integer/google_play_services_version" />
 <!--Include the AdActivity configChanges and theme. -->
