changed the version

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>NstuInfo</name>
+	<name>NstuInfo_1.1</name>
 	<comment></comment>
 	<projects>
 	</projects>
