--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,9 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="21" />
- <uses-permission android:name="android.permission.INTERNET"/>
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -27,17 +28,18 @@
         <activity
             android:name=".NstuInfoDetails"
             android:label="@string/title_activity_nstu_info_details" >
-            android:name="com.mashpy.nstuinfo.WebActivity">
+            >
         </activity>
 
-             <meta-data android:name="com.google.android.gms.version"
-android:value="@integer/google_play_services_version" />
-<!--Include the AdActivity configChanges and theme. -->
-<activity android:name="com.google.android.gms.ads.AdActivity"
-android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
-android:theme="@android:style/Theme.Translucent" />
-        
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <!-- Include the AdActivity configChanges and theme. -->
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent" />
+
     </application>
-    
 
 </manifest>
