--- a/project.properties
+++ b/project.properties
@@ -12,11 +12,11 @@
 
 # Project target.
 target=android-20
-android.library.reference.1=../appcompat_v7
-android.library.reference.2=../google-play-services_lib
+android.library.reference.1=../../workspace/appcompat_v7
+android.library.reference.2=../../workspace/google-play-services_lib
 android.library=false
 
-android.library.reference.1=/mnt/sdcard/.aide/android-support/m2repository/com/android/support/appcompat-v7/21.0.0/appcompat-v7-21.0.0.aar
-android.library.reference.1=/mnt/sdcard/.aide/google/google_m2repository_r12.zip/m2repository/com/google/android/gms/play-services/6.1.11/play-services-6.1.11.exploded.aar
-android.library.reference.1=/storage/sdcard0/.aide/google/google_m2repository_r15.zip/m2repository/com/google/android/gms/play-services/6.5.87/play-services-6.5.87.exploded.aar
-android.library.reference.1=/storage/sdcard0/.aide/android-support/m2repository/com/android/support/gridlayout-v7/21.0.0/gridlayout-v7-21.0.0.aar
+android.library.reference.1=../../workspace/appcompat_v7
+android.library.reference.1=../../workspace/appcompat_v7
+android.library.reference.1=../../workspace/appcompat_v7
+android.library.reference.1=../../workspace/appcompat_v7
