--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".DetaitlsActivity"
+            android:label="@string/title_activity_detaitls"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity
             android:name=".ImageViewTest"
             android:label="@string/title_activity_image_view"
             android:parentActivityName=".MainActivity"
