--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,10 @@ android {
     buildToolsVersion "28.0.0"
     defaultConfig {
         applicationId "com.nstuinfo"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
-        versionCode 9
-        versionName "4.2.1"
+        versionCode 10
+        versionName "4.2.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     dexOptions {
@@ -16,13 +16,14 @@ android {
     }
     buildTypes {
         release {
-            shrinkResources true
-            minifyEnabled true
-            useProguard true
+            //shrinkResources true
+            //useProguard true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
+
 
 
 dependencies {
@@ -41,5 +42,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     compile 'com.github.Hitomis:CircleMenu:v1.1.0'
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    compile 'at.blogc:expandabletextview:1.0.5'
 
 }
