--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,19 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 
 android {
     compileSdkVersion 28
@@ -7,8 +22,8 @@ android {
         applicationId "com.nstuinfo"
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 11
-        versionName "4.2.3"
+        versionCode 12
+        versionName "4.2.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     dexOptions {
@@ -43,5 +58,6 @@ dependencies {
     implementation 'com.github.Hitomis:CircleMenu:v1.1.0'
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation 'at.blogc:expandabletextview:1.0.5'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
 
 }
